# hacivat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
app/: __init__.py  chat.py  config.yaml  setup.cfg  utils.py
cli/: cli.py
